--- a/assets/Styles/CSSReset.css
+++ b/assets/Styles/CSSReset.css
@@ -127,3 +127,22 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    direction: rtl;
+    border: none;
+    outline: none;
+    text-decoration: none;
+    font-family: Vazirmatn;
+    /* font-family: VazirmatnDigit; */
+}
+
+.material-symbols-outlined {
+    cursor: pointer;
+    transition: 0.3s;
+}
