finish style project

--- a/assets/Styles/CSSReset.css
+++ b/assets/Styles/CSSReset.css
@@ -142,7 +142,7 @@ table {
     /* font-family: VazirmatnDigit; */
 }
 
-.material-symbols-outlined {
+iconify-icon {
     cursor: pointer;
     transition: 0.3s;
 }
