--- a/assets/Styles/style.css
+++ b/assets/Styles/style.css
@@ -1,15 +1,11 @@
 @import url(./CSSReset.css);
 @import url(./fontVazirMatn.css);
-@import url();
-@import url();
-@import url();
-@import url();
-@import url();
+@import url(./header.css);
+@import url(./toDoList.css);
+@import url(./google.css);
+@import url(./time.css);
+@import url(./weather.css);
 
-.fi {
-    font-size: 16px;
-    font-weight: bold;
-}
 
 body {
     background: #c4def7;
@@ -20,7 +16,6 @@ body {
 }
 
 .container {
-    /* background-color: red; */
     width: 100%;
     max-width: 1124px;
     height: 100%;
@@ -30,314 +25,11 @@ body {
     align-items: center;
 }
 
-.header {
-    width: 100%;
-    height: 50px;
-    padding: 0 15px;
-    /* background-color: black; */
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 20px;
-}
-
-.logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    gap: 10px;
-}
-
-.logoImage {
-    width: 30px;
-    height: 30px;
-    font-size: 20px;
-}
-
-.logoTitle {
-    font-family: Vazirmatn;
-    font-weight: 700;
-    font-size: 20px;
-    color: rgb(63, 107, 255);
-
-}
-
-.settingApp,
-.signUpApp {
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.settingApp__settingIcon,
-.signUpApp__signUpIcon {
-    font-size: 30px;
-    color: #fff;
-}
-
-.settingApp__settingIcon:hover,
-.signUpApp__signUpIcon:hover {
-    font-size: 30px;
-    color: red;
-}
-
 .main {
     width: 100%;
-    height: 100%;
+    height: calc(100% - 60px);
     display: flex;
     justify-content: center;
     align-items: flex-start;
     gap: 1em;
-}
-
-/* -------------------------- Start Of To Do Section -------------------------- */
-.todoSection {
-    width: calc(25% - 1em);
-    height: 100%;
-    background-color: #fff;
-    border-radius: 24px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    overflow: hidden;
-    gap: 5px;
-}
-
-.todoSectionHeader {
-    /* background-color: blue; */
-    padding: 10px;
-    width: 100%;
-    height: 60px;
-    font-size: 1.5em;
-    font-weight: 700;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 0.8px solid #e5e7eb;
-}
-
-.todoSection__visibilityOff {
-    padding: 6px;
-    border-radius: 10px;
-    background: yellow;
-    color: black;
-}
-
-.todoSection__visibilityOff:hover {
-    color: purple;
-}
-
-.todoSection__TasksList {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 10px;
-}
-
-.todoSection__TasksItem {
-    width: 97%;
-    padding: 8px 4px;
-    background-color: pink;
-    border: 1px solid red;
-    border-radius: 10px;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 3px;
-}
-
-.todoSection__checkBoxIcon {
-    width: 22px;
-    height: 22px;
-    margin-left: 3px;
-    background-color: #cef0d9;
-    border: 1px solid #7DEF4C;
-    border-radius: 5px;
-}
-
-.todoSection__checkBoxIcon:hover {
-    cursor: pointer;
-}
-
-.todoSection__userTaskContent {
-    font-size: 1rem;
-    font-weight: 600;
-    word-spacing: -1.5px;
-    margin-left: auto;
-}
-
-.todoSection__removeIcon,
-.todoSection__editIcon {
-    font-size: 22px;
-}
-
-.todoSection__removeIcon,
-.todoSection__editIcon {
-    font-size: 22px;
-    color: #8f97b1;
-}
-
-
-/* --- Start Of Style Done Task --- */
-.todoSection__doneItem {}
-
-/* --- End Of Style Done Task --- */
-
-.todoSection__addTaskSection {
-    background-color: red;
-    width: 100%;
-    /* height: ; */
-    padding: 12px;
-    border-top: 0.8px solid rgb(229, 231, 235);
-}
-
-.todoSection__addInputWrapper {
-    padding: 0.8px;
-    padding: 0 4px;
-    border: 2.4px solid rgb(214, 211, 209);
-    border-radius: 6px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.todoSection__addInputTask {
-    flex: 1;
-    height: 100%;
-}
-
-.todoSection__addInputTask::placeholder {
-    font-weight: 700;
-}
-
-.todoSection__addBtnTask {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: yellow;
-    width: 14px;
-    height: 18px;
-}
-
-.todoSection__addTaskIcon {
-    font-size: 23px;
-}
-
-/* --------------------------- End Of To Do Section --------------------------- */
-
-/* --------------------------- Start Of Google Section --------------------------- */
-.googleSection {
-    width: calc(50% - 1em);
-    padding-bottom: 0px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 8px;
-    /* border-radius: 24px; */
-}
-
-
-.googleSearchBox {
-    position: relative;
-    width: 100%;
-    height: 100px;
-    background: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.googleSearchBox__searchInput {
-    width: 90%;
-    height: 50px;
-    border-radius: 30px;
-    background-color: rgb(243, 244, 246);
-}
-
-.googleSearchBox__googleLogo {
-    position: absolute;
-    right: 30px;
-    width: 25px;
-    height: 25px;
-}
-
-.googleSearchBox__searchBtn {
-    position: absolute;
-    left: 30px;
-    padding: 10px 20px;
-    border-radius: 30px;
-    background: #222;
-    color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-
-.favoriteWebsites {
-    width: 100%;
-    /* height: calc(100px * 2 + 1rem); */
-    /* background: orange; */
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    gap: 6px;
-}
-
-.favoriteWebsites__appBlock {
-    width: 85px;
-    height: 85px;
-    padding: 8px;
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 4px;
-    border-radius: 10px;
-    gap: 8px;
-    border: 1px solid #006da6;
-}
-
-.favoriteWebsites__appLogo {
-    width: 36px;
-    height: 36px;
-}
-
-.favoriteWebsites__appIcon {
-    width: 36px;
-    height: 36px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.favoriteWebsites__appIcon--size {
-    width: 24px;
-    height: 24px;
-}
-
-.favoriteWebsites__appName {}
-
-
-.favoriteWebsites__appName--Bold {
-    font-weight: 700;
-}
-
-/* ---------------------------- End Of Google Section ---------------------------- */
-.timeAndWeatherSection {
-    width: calc(25% - 1em);
-    height: 100%;
-    background: #fff;
-    border-radius: 24px;
-    overflow: hidden;
-
 }
