--- a/assets/Styles/weather.css
+++ b/assets/Styles/weather.css
@@ -9,17 +9,25 @@
     border-bottom: 0.8px solid rgb(229, 231, 235);
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
-    gap: 4px;
 }
 
-.weatherSection__tempratureComplex,
-.weatherSection__tempratureRange {
+.weatherSection__tempratureComplex {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.weatherSection__tempratureRange {
+    width: 80%;
+    height: 22px;
+    font-size: 10px;
+    color: rgb(107, 114, 128);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .weatherSection__tempratureNumber {
@@ -36,19 +44,24 @@
     height: 50px;
 }
 
-.weatherSection__tempratureText {
-    color: rgb(18, 18, 18);
-    font-size: 12px;
-    font-weight: 700;
+.weatherSection__descriptionsText {
+    width: 100%;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.weatherSection__tempratureRange {
+.weatherSection__tempratureText {
+    height: 100%;
+    color: rgb(18, 18, 18);
     font-size: 10px;
-    width: 80%;
-    gap: 5px;
-    color: rgb(107, 114, 128);
-    justify-content: space-between;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .weatherSection__forecast {
     height: 25.6px;
