--- a/assets/Styles/style.css
+++ b/assets/Styles/style.css
@@ -1,5 +1,6 @@
 @import url(./CSSReset.css);
 @import url(./fontVazirMatn.css);
+@import url(./generalClasses.css);
 @import url(./header.css);
 @import url(./toDoList.css);
 @import url(./google.css);
@@ -9,9 +10,7 @@
 
 body {
     background: #c4def7;
-    display: flex;
     height: 100vh;
-    justify-content: center;
     align-items: flex-start;
 }
 
@@ -19,17 +18,12 @@ body {
     width: 100%;
     max-width: 1124px;
     height: 100%;
-    display: flex;
-    flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
 }
 
 .main {
     width: 100%;
     height: calc(100% - 60px);
-    display: flex;
-    justify-content: center;
     align-items: flex-start;
     gap: 1em;
 }
