--- a/assets/Styles/time.css
+++ b/assets/Styles/time.css
@@ -4,7 +4,7 @@
     background: #fff;
     border-radius: 24px;
     overflow: hidden;
-    display: flex;
+    align-items: flex-start;
 }
 
 .timeSection {
@@ -14,12 +14,8 @@
     font-family: VazirmatnDigit;
     border-left: 0.8px solid rgb(229, 231, 235);
     border-bottom: 0.8px solid rgb(229, 231, 235);
-    display: flex;
-    flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
 }
-
 
 .timeSection__timeIndicator {
     width: 100%;
@@ -27,19 +23,12 @@
     font-size: 30px;
     font-weight: 700;
     color: rgb(39, 110, 247);
-    display: flex;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .solarCalendar {
     width: 100%;
     height: 24px;
     color: rgb(30, 42, 88);
-    display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 5px;
 }
 
@@ -52,8 +41,6 @@
 .timeSection__doubleCalender {
     padding: 3px 0;
     width: 100%;
-    display: flex;
-    justify-content: center;
     align-items: flex-start;
     gap: 2px;
     font-size: 8px;
@@ -72,9 +59,7 @@
 .timeSection__btnsWrapper {
     width: 100%;
     height: 25.6px;
-    display: flex;
     justify-content: space-around;
-    align-items: center;
     font-size: 8px;
 }
 
@@ -82,9 +67,6 @@
 .timeSection__oqat {
     height: 25.6px;
     padding: 4px 8px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 1px;
     border-radius: 100px;
     border: 0.8px solid rgb(229, 231, 235);
