--- a/assets/Styles/responsiveMobile.css
+++ b/assets/Styles/responsiveMobile.css
@@ -1,5 +1,121 @@
-@media(max-width : 340px) {
+/* -------- 720px to 340px -------- */
+@media(min-width:900px) and (max-width:1100px) {
+    body {
+        padding: 10px;
+    }
 
+    .favoriteWebsites__appBlock {
+        width: 80px;
+        height: 80px;
+    }
+
+    .favoriteWebsites__appName {
+        text-align: center;
+    }
+}
+
+
+
+/* -------- 900px to 550px -------- */
+@media (min-width:550px) and (max-width:900px) {
+    body {
+        height: auto;
+    }
+
+    .main {
+        width: 100%;
+        padding: 15px;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }
+
+    .todoSection,
+    .timeAndWeatherSection,
+    .googleSection {
+        width: 100%;
+    }
+
+    .todoSection,
+    .timeAndWeatherSection {
+        width: 48%;
+    }
+
+    .googleSection {
+        order: 1;
+    }
+
+    .timeAndWeatherSection {
+        order: 2;
+    }
+
+    .todoSection {
+        order: 3;
+    }
+
+    .favoriteWebsites__appBlock {
+        width: calc((100% - 6px) / 5);
+    }
+
+    .timeAndWeatherSection {
+        height: 140px;
+    }
+
+    .timeSection,
+    .weatherSection {
+        height: 100%;
+    }
+}
+
+/* -------- 550px to 340px -------- */
+@media (min-width: 340px) and (max-width : 550px) {
+    body {
+        height: auto;
+    }
+
+    .main {
+        width: 100%;
+        padding: 15px;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+    }
+
+    .todoSection,
+    .timeAndWeatherSection,
+    .googleSection {
+        width: 100%;
+    }
+
+    .googleSection {
+        order: 1;
+    }
+
+    .timeAndWeatherSection {
+        order: 2;
+    }
+
+    .todoSection {
+        order: 3;
+    }
+
+    .favoriteWebsites__appBlock {
+        width: calc((100% - 6px) / 3);
+    }
+
+    .timeAndWeatherSection {
+        height: 140px;
+    }
+
+    .timeSection,
+    .weatherSection {
+        height: 100%;
+    }
+}
+
+/* -------- 340px to down -------- */
+@media (max-width: 340px) {
     body {
         height: auto;
     }
@@ -34,9 +150,13 @@
         width: calc((100% - 6px) / 2);
     }
 
+    .timeAndWeatherSection {
+        height: 160px;
+    }
 
-
-
-
+    .timeSection,
+    .weatherSection {
+        height: 100%;
+    }
 
 }
